# data-handler

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml
assets/: index.html
assets/run_info/: run_info.css  run_info.js
src/: cmd.rs  communication.rs  core_command.rs  core_commands.rs  main.rs  secondary_script.rs  templates.rs  ws.rs
templates/: run_info.html
