[package]
name = "data-handler-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
