[package]
name = "data-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
futures = "0.3.30"
indicatif = "0.17.8"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
